--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,3 +1,9 @@
-<h3>Welcome to watchListed</h3>
-<p>Create an account or login to search for movies you hear about, save them to your list, and keep a reminder that you need to watch them.</p>
-<p>When you watch it, come back and remove it from your list, simple as that!</p>
+<div class="top">
+	<h3>Welcome to watchListed</h3>
+	<a href="/login">Login</a> | <a href="/signup">Sign Up</a>
+</div>
+
+<div class="content">
+	<p>Create an account or login to search for movies you hear about, save them to your list, and keep a reminder that you need to watch them.</p>
+	<p>When you watch it, come back and remove it from your list, simple as that!</p>
+</div>
