--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,9 +1,14 @@
 <div class="top">
-	<h3><u>Login</u></h3> | <a href="/signup"><h3>Sign Up</h3></a>
+	<div>
+		<h3><u>Login</u></h3>
+	</div> 
+	<div>
+		<a href="/signup"><h3>Sign Up</h3></a>
+	</div>
 </div>
 
 <form ng-submit="login()">
-	<input type="text" ng-model="username" placeholder="Username">
-	<input type="password" ng-model="password" placeholder="Password">
+	<input type="text" ng-model="user.username" placeholder="Username">
+	<input type="password" ng-model="user.password" placeholder="Password">
 	<input type="submit" value="Login">
 </form>
