--- a/public/views/signup.html
+++ b/public/views/signup.html
@@ -8,7 +8,7 @@
 </div>
 
 <form ng-submit="signup()">
-	<input type="text" ng-model="username" placeholder="Username"><br/>
-	<input type="password" ng-model="password" placeholder="Password"><br/>
+	<input type="text" ng-model="user.username" placeholder="Username"><br/>
+	<input type="password" ng-model="user.password" placeholder="Password"><br/>
 	<input type="submit" value="Sign Up">
 </form>
