--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -1,5 +1,9 @@
 <div class="top">
 	<h3>Username will go here: {{user.username}}</h3>
+	<ul>
+		<li><a href="/search">Search</a></li>
+		<li><a href="/logout">Log Out</a></li>
+	</ul>
 </div>
 
 <div class="list">
