--- a/public/views/search.html
+++ b/public/views/search.html
@@ -1,3 +1,11 @@
 <div class="top">
 	<h3>Search</h3>
 </div>
+
+<form>
+	<input type="text" ng-model="search.value">
+</form>
+
+<ul>
+	<li>{{search.value}}</li>
+</ul>
