--- a/public/views/signup.html
+++ b/public/views/signup.html
@@ -10,8 +10,8 @@
 	</div>
 </div>
 
-<form ng-submit="signup()">
-	<input type="text" ng-model="user.username" placeholder="Username"><br/>
-	<input type="password" ng-model="user.password" placeholder="Password"><br/>
+<form ng-submit="ctrl.signup()">
+	<input type="text" ng-model="ctrl.user.username" placeholder="Username"><br/>
+	<input type="password" ng-model="ctrl.user.password" placeholder="Password"><br/>
 	<input type="submit" value="Sign Up">
 </form>
