--- a/public/views/index.html
+++ b/public/views/index.html
@@ -6,5 +6,9 @@
 <div class="content">
 	<p>Create an account or login to search for movies you hear about, save them to your list, and keep a reminder that you need to watch them.</p>
 	<p>When you watch it, come back and remove it from your list, simple as that!</p>
-	<a href="/profile">Check out the profile, for test purposes</a>
+	<h4>Users:</h4>
+	<ul>
+		<li ng-repeat="user in ctrl.users">
+			<a href="/users/{{user.username}}">{{user.username}}</a>
+		</li>
 </div>
