--- a/public/views/search.html
+++ b/public/views/search.html
@@ -2,10 +2,11 @@
 	<h3>Search</h3>
 </div>
 
-<form>
-	<input type="text" ng-model="search.value">
+<form ng-submit="ctrl.search()">
+	<input type="text" ng-model="ctrl.searchString">
+	<input type="submit" value="Search for Movies">
 </form>
 
 <ul>
-	<li>{{search.value}}</li>
+	<li ng-repeat="result in ctrl.searchResults">{{result.title}} ({{result.year}})</li>
 </ul>
