--- a/public/views/search.html
+++ b/public/views/search.html
@@ -9,13 +9,8 @@
 
 <ul>
 	<li ng-repeat="result in ctrl.searchResults">
-		<a href="http://imdb.com/title/{{result.imdbID}}/">{{result.Title}}</a> ({{result.Year}})
-		<form ng-submit="ctrl.addMovie()">
-			<input type="hidden" ng-model="ctrl.listItem.title" value="{{result.Title}}">
-			<input type="hidden" ng-model="ctrl.listItem.imdb" value="{{result.imdbID}}">
-			<input type="hidden" ng-model="ctrl.listItem.year" value="{{result.Year}}">
-			<input type="hidden" ng-model="ctrl.listItem.img" value="{{result.Poster}}">
-			<input type="submit" value="Add Movie to Your List!">
-		</form>
+		<a href="http://imdb.com/title/{{result.imdbID}}/">{{result.Title}}</a> ({{result.Year}})<br/>
+		<img src="{{result.Poster}}" width=200px /><br/>
+		<button ng-click="ctrl.addMovie(result.Title, result.imdbID, result.Year, result.Poster)">Add Movie to your list!</button>
 	</li>
 </ul>
