updated styling to account for footer appearance on search page; now fixed and the main section has extra bottom margin to clear the footer

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -33,11 +33,16 @@ header a {
 	color: #111;
 }
 
+main {
+	margin-bottom: 1.5rem;
+}
+
 footer {
-	position: absolute;
+	width: 100vw;
+	height: 1.25rem;
+	position: fixed;
+	background: #eee;
 	bottom: 0;
-	left: 40vw;
-	right: 40vw;
 }
 
 .top > div {
