--- a/public/views/login.html
+++ b/public/views/login.html
@@ -10,8 +10,8 @@
 	</div>
 </div>
 
-<form ng-submit="login()">
-	<input type="text" ng-model="user.username" placeholder="Username">
-	<input type="password" ng-model="user.password" placeholder="Password">
+<form ng-submit="ctrl.login()">
+	<input type="text" ng-model="ctrl.user.username" placeholder="Username">
+	<input type="password" ng-model="ctrl.user.password" placeholder="Password">
 	<input type="submit" value="Login">
 </form>
