sessions now sending an error message when username/password is incorrect, and that is displaying to the page

--- a/public/views/login.html
+++ b/public/views/login.html
@@ -15,3 +15,5 @@
 	<input type="password" ng-model="ctrl.user.password" placeholder="Password">
 	<input type="submit" value="Login">
 </form>
+
+<h3>{{ctrl.message}}</h3>
