login now redirecting to user page; still need to check and make sure the logged in user is stored in a session to be able to add movies and update the user action bar at the top

--- a/public/views/login.html
+++ b/public/views/login.html
@@ -16,4 +16,4 @@
 	<input type="submit" value="Login">
 </form>
 
-<h3>{{ctrl.loggedInUser || "No One"}} Logged In</h3>
+<h3>{{ctrl.loggedInUser || "No one"}} Logged In</h3>
